# scout-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt  run.py
.mind/: MEMORY.md
config/: domains.yaml
data/: .gitkeep
docs/: MASTER_PRD.md  PRD.md
src/: __init__.py  config.py  main.py  pipeline.py  scheduler.py
src/ai/: __init__.py  analyzer.py
src/ai/agents/: __init__.py
src/ai/prompts/: analyst_system.txt  ideator_system.txt
src/core/: __init__.py  deduplicator.py  filter.py  scanner.py  scorer.py
src/delivery/: __init__.py  formatter.py  scheduler.py  telegram_bot.py
src/delivery/templates/: digest.md.j2  idea_card.md.j2
src/execution/: __init__.py
src/learning/: __init__.py
src/storage/: __init__.py  database.py  models.py
src/workflow/: __init__.py
tests/: __init__.py  conftest.py
